--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -122,7 +122,7 @@ In the example depicted in {\bf Fig~\ref{cartoon}}, five offspring and four pare
 
 \subsection{HS pair-based model}
 
-Here, we consider the probability that two offspring sampled in the population 1 and 2 share an HS relationship with an arbitrary mother or father, denoted by $\pi_{\rm HS, bet}$. For the explanation purpose, we assume equal reproductive potential among parents in this section, although this assumption can be relaxed for most of the case (see details in {\bf Appendix}). $\pi_{\rm HS, bet}$ can be partitioned into the three probabilities: (i) the probability that sampled offspring in the population 1 born to a parent that safely arrives in the population 2 (hereafter, called "migrant"); (ii) the probability that sampled offspring in the population 2 born to a migrant; and (iii) the probability that the migrant of a sampled offspring in the population 1 and the migrant of a sampled offspring in the population 2 are identical. 
+Here, we consider the probability that two offspring sampled in the population 1 and 2 share an HS relationship with an arbitrary mother or father, denoted by $\pi_{\rm HS, bet}$. For the explanation purpose, we assume equal reproductive potential among parents up to the subsection 2.7, although this assumption can be relaxed for most of the case (see details in {\bf Appendix}). $\pi_{\rm HS, bet}$ can be partitioned into the three probabilities: (i) the probability that sampled offspring in the population 1 born to a parent that safely arrives in the population 2 (hereafter, called "migrant"); (ii) the probability that sampled offspring in the population 2 born to a migrant; and (iii) the probability that the migrant of a sampled offspring in the population 1 and the migrant of a sampled offspring in the population 2 are identical. 
 
 To assess these probabilities, recall there must be two parents of arbitral offspring; the first probability is the sum of father-offspring and mother-offspring relationship, which can be written by $r_{\rm M}M/(r_{\rm S,1}N_{1}) + (1 - r_{\rm M})M/((1-r_{\rm S,1})N_{1})$, where $r_{\rm M}$ and $r_{\rm S,1}$ indicates sex ratio of parents in the migrants and in the whole of the population 1, respectively. Assuming $r_{\rm M} = r_{\rm S,1}$, the probability is simplified as $2M/N_{1}$. Similarly, the second probability is simplified as $2M/N_{2}$, implying the assumption of equal sex ratio in the migrants and the others. The third probability corresponds to the probability that randomly selected two migrants are identical, that is $1/M$. Taken together, we obtain
 \begin{align}
@@ -253,6 +253,7 @@ Table \ref{parameter} summarizes the conditions for estimators appeared in this 
 
 \subsection{Variation in reproductive potential among individuals and populations}
 
+The proposed estimators are derived under the assumption that reproductive potential is the same among individuals. As noted in {\bf Appendix}, this assumption can be relaxed and the estimators still hold, which is exemplified in iteroparous species that may show significant variation in reproductive potential among individuals. Furthermore, the estimators even hold for most of the case where mean reproductive potential are different between population 1 and 2, which is exemplified in the situation that the environmental condition for reproductive success varies between populations. The necessary condition is that the migration event does not depends on the degree of reproductive potential (see details in  {\bf Appendix}). 
 
 \RED{kokomade!!!!!!!!!!!!!!!!!!!!}
 
