--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -567,6 +567,8 @@ Here, we introduce the concept of the reproductive potential of parent $i$ or $j
 \end{align}
 と近似される。結局，繁殖ポテンシャルの不均一性を考慮しない結果（式\ref{3-1}）と同様になる。なお，$\boldsymbol{\lambda_1}=(\lambda_{1,1}, \ldots, \lambda_{1,N_1})$および$\boldsymbol{\lambda_2}=(\lambda_{1,2}, \ldots, \lambda_{1,N_2})$。この近似は、独立に決まる確率変数$\lambda_1$と$\lambda_2$について、$\mathbb{E}[\lambda_1/\lambda_2]=\mathbb{E}[\lambda_1] \times \mathbb{E}[1/\lambda_2] \approx 1$となる場合に成立するので、集団中に$\lambda$が極端に低い個体が存在する場合は成立しない（サブ集団１とサブ集団２でセットにして相対的な繁殖ポテンシャルを考えれば良いので、問題ないだろう）。
 
+親子ペアから親の数を推定する場合も、繁殖ポテンシャルの不均一性は問題にならない。すなわち、ビッグマザーが存在していても、それをサンプルできるかどうかは運であり、期待値は推定値に漸近するからである。
+
 
 
 \section*{APPENDIX A}
