catch up manuscript

--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -104,7 +104,7 @@ In this section, we present the theoretical foundation for estimating a migrant 
 
 \subsection{Hypothetical population}
 
-Suppose that we have a set of two populations labelled 1 and 2 where random mating occurs within each population and that parents can move to the other population after the end of the reproductive season. Hereafter, without loss of generality, we consider the movement of parents in the direction from population 1 to population 2 and focus on the migration number or rate, and that is what we attempt to estimate. In this framework, considering two reproductive seasons (hereafter, we call them "the first year" and "the second year") is enough to estimate it. {\bf Figure \ref{cartoon}} presents a schematic representation of the kinship relationships and movements of parents. 
+Suppose that we have a set of two populations labelled 1 and 2 where random mating occurs within each population and that parents can move to the other population after the end of the reproductive season. Hereafter, without loss of generality, we consider the movement of parents in the direction from population 1 to population 2 and focus on the migration number or rate, and that is what we attempt to estimate. In this framework, we show that considering two reproductive seasons (hereafter, we call them "the first year" and "the second year") is enough to estimate it. {\bf Figure \ref{cartoon}} presents a schematic representation of the kinship relationships and movements of parents. 
 
 Suppose there are $N_1$ parents in the population 1 at the beginning of the first year. Each parent produces offspring in which the number is governed by the parent's reproductive potential, denoted by $\lambda_{i,1}$ ($i=1,2,\ldots,N_1$). After the reproductive season, part of the parents would start to moving towards the population 2; $M$ survived migrants arrive in the population 2 so that there are $N_2$ parents in the population 2 at the beginning of the second year ($M < N_2$). Similar to the population 1, $N_2$ parents produce offspring in which the number is governed by $\lambda_{j,2}$ ($j=1,2,\ldots,N_2$). The reproductive potential is determined by several factors and its details are summarized in {\bf Appendix}; theoretically speaking, the number of offspring for each parent is set as a random variable with mean $\lambda_{i,1}$ or $\lambda_{j,2}$. 
 
@@ -116,7 +116,7 @@ Suppose there are $N_1$ parents in the population 1 at the beginning of the firs
 
 \subsection{Sampling}
 
-To estimate the migration number or rate, we utilize the number of HS and/or PO pairs observed in a sample. In the both populations, $n_{\rm O, 1}$ and $n_{\rm O, 2}$ offspring are randomly sampled, which are identified as young-of-year individuals without errors. Additionally, $n_{\rm P, 1}$ and $n_{\rm P, 2}$ parents are randomly sampled immediately after the end of the reproductive season in the first and second year, respectively. For mathematical tractability, parents have to survive during the reproductive season; therefore, both mother and father of a certain offspring have a potential to be sampled even in the same year. It should be noted that all the four kinds of a sample (i.e., $n_{\rm P, 1}$, $n_{\rm P, 2}$, $n_{\rm O, 1}$, and $n_{\rm O, 2}$) are not always required for estimating migration number or rate; what kinds of a sample are needed depends on the situation \RED{(rewrite clearly)}. Up to the subsection 2.6, we only focus HS pairs and PO pairs found between the two populations. For the applicability of fishery management, we assume invasive sampling procedure, preventing the finding of a parent-offspring pair such that a parent and offspring is sampled in the population 1 and 2, respectively. 
+To estimate the migration number or rate, we utilize the number of HS and/or PO pairs observed in a sample. In the both populations, $n_{\rm O, 1}$ and $n_{\rm O, 2}$ offspring are randomly sampled, which are identified as young-of-year individuals without errors. Additionally, $n_{\rm P, 1}$ and $n_{\rm P, 2}$ parents are randomly sampled immediately after the end of the reproductive season in the first and second year, respectively. For mathematical tractability, parents have to survive during the reproductive season; therefore, both mother and father of a certain offspring have a potential to be sampled even in the same year. It should be noted that all the four kinds of a sample (i.e., $n_{\rm P, 1}$, $n_{\rm P, 2}$, $n_{\rm O, 1}$, and $n_{\rm O, 2}$) are not always required for estimating migration number or rate; what kinds of a sample are needed depends on the situation, as explained later. Up to the subsection 2.6, we only focus HS pairs and PO pairs found between the two populations. For the applicability of fishery management, we assume invasive sampling procedure, preventing the finding of a parent-offspring pair such that a parent and offspring is sampled in the population 1 and 2, respectively. 
 
 In the example depicted in {\bf Fig~\ref{cartoon}}, five offspring and four parents are sampled in the population 1 and four offspring and six parents are sampled in the population 2, and two HS and one PO pairs found between the two populations are observed. In addition, there are several PO pairs observed within the same population, which are available to estimate parent numbers, as explain the next section. In our modeling framework, if full-sibling (FS) relationship is found, we count it as two HS pairs. The numbers of HS and PO pairs found between the two populations are determined by pairwise comparison of all the sample individuals ($n_{\rm O,1}\times n_{\rm O,2}$ and $n_{\rm O,1}\times n_{\rm P,2}$ comparisons, respectively). 
 
@@ -199,7 +199,7 @@ and
 n_{\rm O, 1} n_{\rm P, 2} &> \frac{ N_{2} } { 2m }.
 \label{RS-2}
 \end{align}
-Roughly speaking, required sample size to ensure above conditions is that $n>\sqrt{N_2}$, where $n = n_{\rm O, 1}=n_{\rm O, 2}=n_{\rm P, 2}$. It should be noted that very tiny $m$, which dramatically increases the required sample size, produces genetic differences between two populations. In such a case, there are several methods to estimate migration rate by population genetics technique; alternatively, we focus the situation of moderate/large migration rate, which leads little genetic differences between two populations. 
+Roughly speaking, required sample size to ensure above conditions is that $n>\sqrt{N_2}$, where $n = n_{\rm O, 1}=n_{\rm O, 2}=n_{\rm P, 2}$. It should be noted that very tiny $m$, which dramatically increases the required sample size, produces significant genetic differences between two populations. In such a case, there are several methods to estimate migration rate by population genetics technique; alternatively, we focus the situation of moderate/large migration rate, which leads little genetic differences between two populations (see details in {\bf Results and Discussion} section). 
 
 \subsection{Efficient use of kinship pairs found between populations}
 
@@ -225,7 +225,7 @@ When PO pairs found in offspring samples and parent samples both from the popula
 \widehat{N_2} &= \frac{ 2 n_{\rm O, 2} n_{\rm P, 2} + 1 }{\widetilde{H}_{\rm PO, 2} + 1} ,
 \label{AP-3}
 \end{align}
-where $\widetilde{H}_{\rm PO, 2}$ be the observed number of PO pairs found in offspring samples of size $n_{\rm O, 2}$ and parent samples of size $n_{\rm P, 2}$. The term ``$+1$'' reduces the bias especially when $\widetilde{H}_{\rm PO, 2}$ is small \cite[e.g.,][]{ecolevol2021p}, where a similar derivation of this bias correction is provided in \cite{Akita_2019}. By replacing $N_2$ by $\widehat{N_2}$ in Eqs.~\ref{AP-1} and \ref{AP-2}, we can obtain the following estimators: 
+where $\widetilde{H}_{\rm PO, 2}$ is the observed number of PO pairs found in offspring samples of size $n_{\rm O, 2}$ and parent samples of size $n_{\rm P, 2}$. The term ``$+1$'' reduces the bias especially when $\widetilde{H}_{\rm PO, 2}$ is small \cite[e.g.,][]{ecolevol2021p}, where a similar derivation of this bias correction is provided in \cite{Akita_2019}. By replacing $N_2$ by $\widehat{N_2}$ in Eqs.~\ref{AP-1} and \ref{AP-2}, we can obtain the following estimators: 
 
 \begin{align}
 \widehat{M_4} &=  \frac{ N_{1} \left(\widetilde{H}_{\rm HS,bet} + \widetilde{H}_{\rm PO,bet}\right) \left(2 n_{\rm O, 2} n_{\rm P, 2} + 1\right)} {2n_{\rm O, 1} \left(2 n_{\rm O, 2} + n_{\rm P, 2}\right) \left(\widetilde{H}_{\rm PO, 2} + 1\right)},
@@ -243,7 +243,7 @@ Similar to estimating $N_2$, when PO pairs found in offspring samples and parent
 \widehat{N_1} &= \frac{ 2 n_{\rm O, 1} n_{\rm P, 1} + 1 }{\widetilde{H}_{\rm PO, 1} + 1},
 \label{AP-6}
 \end{align}
-where $\widetilde{H}_{\rm PO, 1}$ be the observed number of PO pairs found in offspring samples of size $n_{\rm O, 1}$ and parent samples of size $n_{\rm P, 1}$. By replacing $N_1$ by $\widehat{N_1}$ in Eq.~\ref{AP-4}, we can obtain the estimator of migration number that can be calculated only from genetic data, given by
+where $\widetilde{H}_{\rm PO, 1}$ is the observed number of PO pairs found in offspring samples of size $n_{\rm O, 1}$ and parent samples of size $n_{\rm P, 1}$. By replacing $N_1$ by $\widehat{N_1}$ in Eq.~\ref{AP-4}, we can obtain the estimator of migration number that can be calculated only from genetic data, given by
 \begin{align}
 \widehat{M_5} &=  \frac{ \left(\widetilde{H}_{\rm HS,bet} + \widetilde{H}_{\rm PO,bet}\right) \left(2 n_{\rm O, 1} n_{\rm P, 1} + 1\right) \left(2 n_{\rm O, 2} n_{\rm P, 2} + 1\right)} {2n_{\rm O, 1} \left(2 n_{\rm O, 2} + n_{\rm P, 2}\right) \left(\widetilde{H}_{\rm PO, 1} + 1\right) \left(\widetilde{H}_{\rm PO, 2} + 1\right)}.
 \label{AP-7}
